# libclang_experiments

./: exception.py  function.py  index.py  main.py  scratch.py  todo.org  typedef_to_using.py  util.py
sample_proj/: .clang-format  .gitignore  CMakeLists.txt
sample_proj/src/: main.cpp
sample_proj/test/: main.cpp
